--- a/ecommerce-ui/package.json
+++ b/ecommerce-ui/package.json
@@ -8,19 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^1.6.2",
-    "sweetalert2": "^11.10.2",
+    "axios": "^1.10.0",
+    "core-js": "^3.8.3",
+    "sweetalert2": "^11.22.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.3",
+    "stripe": "^8.137.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^9.0.0",
-    "eslint-plugin-vue": "^9.0.0"
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3"
   },
   "eslintConfig": {
     "root": true,
